--- a/no-urltest-simple.ini
+++ b/no-urltest-simple.ini
@@ -24,7 +24,7 @@ ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 ruleset=全球直连,[]GEOIP,CN
 ruleset=漏网之鱼,[]FINAL
 
-custom_proxy_group=节点选择`select`.* 
+custom_proxy_group=节点选择`select`[]DIRECT`.*
 custom_proxy_group=全球直连`select`[]DIRECT`[]节点选择
 custom_proxy_group=全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=漏网之鱼`select`[]节点选择`[]全球直连`.*
